// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Deposit overview renders automatic payout correctly 1`] = `
.emotion-0 {
  background-color: #fff;
  color: #1e1e1e;
  position: relative;
  box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.1);
  outline: none;
  border-radius: calc(2px - 1px);
}

.emotion-2 {
  height: 100%;
}

.emotion-4 {
  background: transparent;
  display: block;
  margin: 0!important;
  pointer-events: none;
  position: absolute;
  will-change: box-shadow;
  border-radius: inherit;
  bottom: 0;
  box-shadow: 0 0px 0px 0 rgba(0 ,0, 0, 0);
  opacity: 1;
  left: 0;
  right: 0;
  top: 0;
  -webkit-transition: box-shadow 200ms cubic-bezier(0.08, 0.52, 0.52, 1);
  transition: box-shadow 200ms cubic-bezier(0.08, 0.52, 0.52, 1);
  border-radius: 2px;
}

@media ( prefers-reduced-motion: reduce ) {
  .emotion-4 {
    transition-duration: 0ms;
  }
}

.emotion-12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  width: 100%;
  border-bottom: 1px solid;
  box-sizing: border-box;
  border-color: rgba(0, 0, 0, 0.1);
  padding: calc(4px * 4) calc(4px * 6);
}

.emotion-12>*+*:not( marquee ) {
  margin-left: calc(4px * 2);
}

.emotion-12>* {
  min-width: 0;
}

.emotion-12:last-child {
  border-bottom: none;
}

.emotion-12:first-of-type {
  border-top-left-radius: calc(2px - 1px);
  border-top-right-radius: calc(2px - 1px);
}

.emotion-12:last-of-type {
  border-bottom-left-radius: calc(2px - 1px);
  border-bottom-right-radius: calc(2px - 1px);
}

.emotion-14 {
  color: #1e1e1e;
  line-height: 1.2;
  margin: 0;
  font-size: calc((16 / 13) * 13px);
  font-weight: 600;
}

.emotion-16 {
  box-sizing: border-box;
  height: auto;
  max-height: 100%;
  padding: calc(4px * 4) calc(4px * 6);
}

.emotion-16:first-of-type {
  border-top-left-radius: calc(2px - 1px);
  border-top-right-radius: calc(2px - 1px);
}

.emotion-16:last-of-type {
  border-bottom-left-radius: calc(2px - 1px);
  border-bottom-right-radius: calc(2px - 1px);
}

<div>
  <div
    class="wcpay-deposit-overview"
  >
    <div
      class="components-surface components-card wcpay-deposit-automatic emotion-0 emotion-1"
      data-wp-c16t="true"
      data-wp-component="Card"
    >
      <div
        class="emotion-2 emotion-1"
      >
        <ul>
          <li
            class="woocommerce-summary__item-container"
          >
            <div
              class="woocommerce-summary__item"
            >
              <div
                class="woocommerce-summary__item-label"
              >
                Payout date: Jan 2, 2020
              </div>
              <div
                class="woocommerce-summary__item-data"
              >
                <div
                  class="woocommerce-summary__item-value"
                >
                  <div
                    class="woocommerce-order-status"
                  >
                    <span
                      class="woocommerce-order-status__indicator is-paid"
                    />
                    Completed (paid)
                  </div>
                </div>
              </div>
            </div>
          </li>
          <li
            class="wcpay-deposit-amount"
          >
            $20.00
          </li>
        </ul>
      </div>
      <div
        aria-hidden="true"
        class="components-elevation emotion-4 emotion-1"
        data-wp-c16t="true"
        data-wp-component="Elevation"
      />
      <div
        aria-hidden="true"
        class="components-elevation emotion-4 emotion-1"
        data-wp-c16t="true"
        data-wp-component="Elevation"
      />
    </div>
    <div
      class="components-surface components-card emotion-0 emotion-1"
      data-wp-c16t="true"
      data-wp-component="Card"
    >
      <div
        class="emotion-2 emotion-1"
      >
        <div
          class="components-flex components-card__header components-card-header emotion-12 emotion-1"
          data-wp-c16t="true"
          data-wp-component="CardHeader"
        >
          <span
            class="components-truncate components-text emotion-14 emotion-1"
            data-wp-c16t="true"
            data-wp-component="Text"
          >
            Payout details
          </span>
        </div>
        <div
          class="components-card__body components-card-body emotion-16 emotion-1"
          data-wp-c16t="true"
          data-wp-component="CardBody"
        >
          <div
            class="woopayments-payout-details-header"
          >
            <div
              class="woopayments-payout-details-header__item"
            >
              <h2>
                Bank account
              </h2>
              <div
                class="woopayments-payout-details-header__value"
              >
                MOCK BANK •••• 1234 (USD)
              </div>
            </div>
            <div
              class="woopayments-payout-details-header__item"
            >
              <h2>
                Bank reference ID
              </h2>
              <div
                class="woopayments-payout-details-header__value"
              >
                <div
                  class="woopayments-payout-details-header__value"
                >
                  Not available
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        aria-hidden="true"
        class="components-elevation emotion-4 emotion-1"
        data-wp-c16t="true"
        data-wp-component="Elevation"
      />
      <div
        aria-hidden="true"
        class="components-elevation emotion-4 emotion-1"
        data-wp-c16t="true"
        data-wp-component="Elevation"
      />
    </div>
  </div>
</div>
`;

exports[`Deposit overview renders automatic withdrawal correctly 1`] = `
.emotion-0 {
  background-color: #fff;
  color: #1e1e1e;
  position: relative;
  box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.1);
  outline: none;
  border-radius: calc(2px - 1px);
}

.emotion-2 {
  height: 100%;
}

.emotion-4 {
  background: transparent;
  display: block;
  margin: 0!important;
  pointer-events: none;
  position: absolute;
  will-change: box-shadow;
  border-radius: inherit;
  bottom: 0;
  box-shadow: 0 0px 0px 0 rgba(0 ,0, 0, 0);
  opacity: 1;
  left: 0;
  right: 0;
  top: 0;
  -webkit-transition: box-shadow 200ms cubic-bezier(0.08, 0.52, 0.52, 1);
  transition: box-shadow 200ms cubic-bezier(0.08, 0.52, 0.52, 1);
  border-radius: 2px;
}

@media ( prefers-reduced-motion: reduce ) {
  .emotion-4 {
    transition-duration: 0ms;
  }
}

.emotion-12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  width: 100%;
  border-bottom: 1px solid;
  box-sizing: border-box;
  border-color: rgba(0, 0, 0, 0.1);
  padding: calc(4px * 4) calc(4px * 6);
}

.emotion-12>*+*:not( marquee ) {
  margin-left: calc(4px * 2);
}

.emotion-12>* {
  min-width: 0;
}

.emotion-12:last-child {
  border-bottom: none;
}

.emotion-12:first-of-type {
  border-top-left-radius: calc(2px - 1px);
  border-top-right-radius: calc(2px - 1px);
}

.emotion-12:last-of-type {
  border-bottom-left-radius: calc(2px - 1px);
  border-bottom-right-radius: calc(2px - 1px);
}

.emotion-14 {
  color: #1e1e1e;
  line-height: 1.2;
  margin: 0;
  font-size: calc((16 / 13) * 13px);
  font-weight: 600;
}

.emotion-16 {
  box-sizing: border-box;
  height: auto;
  max-height: 100%;
  padding: calc(4px * 4) calc(4px * 6);
}

.emotion-16:first-of-type {
  border-top-left-radius: calc(2px - 1px);
  border-top-right-radius: calc(2px - 1px);
}

.emotion-16:last-of-type {
  border-bottom-left-radius: calc(2px - 1px);
  border-bottom-right-radius: calc(2px - 1px);
}

<div>
  <div
    class="wcpay-deposit-overview"
  >
    <div
      class="components-surface components-card wcpay-deposit-automatic emotion-0 emotion-1"
      data-wp-c16t="true"
      data-wp-component="Card"
    >
      <div
        class="emotion-2 emotion-1"
      >
        <ul>
          <li
            class="woocommerce-summary__item-container"
          >
            <div
              class="woocommerce-summary__item"
            >
              <div
                class="woocommerce-summary__item-label"
              >
                Withdrawal date: Jan 2, 2020
              </div>
              <div
                class="woocommerce-summary__item-data"
              >
                <div
                  class="woocommerce-summary__item-value"
                >
                  <div
                    class="woocommerce-order-status"
                  >
                    <span
                      class="woocommerce-order-status__indicator is-paid"
                    />
                    Completed (deducted)
                  </div>
                </div>
              </div>
            </div>
          </li>
          <li
            class="wcpay-deposit-amount"
          >
            -$20.00
          </li>
        </ul>
      </div>
      <div
        aria-hidden="true"
        class="components-elevation emotion-4 emotion-1"
        data-wp-c16t="true"
        data-wp-component="Elevation"
      />
      <div
        aria-hidden="true"
        class="components-elevation emotion-4 emotion-1"
        data-wp-c16t="true"
        data-wp-component="Elevation"
      />
    </div>
    <div
      class="components-surface components-card emotion-0 emotion-1"
      data-wp-c16t="true"
      data-wp-component="Card"
    >
      <div
        class="emotion-2 emotion-1"
      >
        <div
          class="components-flex components-card__header components-card-header emotion-12 emotion-1"
          data-wp-c16t="true"
          data-wp-component="CardHeader"
        >
          <span
            class="components-truncate components-text emotion-14 emotion-1"
            data-wp-c16t="true"
            data-wp-component="Text"
          >
            Withdrawal details
          </span>
        </div>
        <div
          class="components-card__body components-card-body emotion-16 emotion-1"
          data-wp-c16t="true"
          data-wp-component="CardBody"
        >
          <div
            class="woopayments-payout-details-header"
          >
            <div
              class="woopayments-payout-details-header__item"
            >
              <h2>
                Bank account
              </h2>
              <div
                class="woopayments-payout-details-header__value"
              >
                MOCK BANK •••• 1234 (USD)
              </div>
            </div>
            <div
              class="woopayments-payout-details-header__item"
            >
              <h2>
                Bank reference ID
              </h2>
              <div
                class="woopayments-payout-details-header__value"
              >
                <div
                  class="woopayments-payout-details-header__value"
                >
                  Not available
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        aria-hidden="true"
        class="components-elevation emotion-4 emotion-1"
        data-wp-c16t="true"
        data-wp-component="Elevation"
      />
      <div
        aria-hidden="true"
        class="components-elevation emotion-4 emotion-1"
        data-wp-c16t="true"
        data-wp-component="Elevation"
      />
    </div>
  </div>
</div>
`;

exports[`Deposit overview renders instant deposit correctly 1`] = `
.emotion-0 {
  background-color: #fff;
  color: #1e1e1e;
  position: relative;
  box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.1);
  outline: none;
  border-radius: calc(2px - 1px);
}

.emotion-2 {
  height: 100%;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  width: 100%;
  border-bottom: 1px solid;
  box-sizing: border-box;
  border-color: rgba(0, 0, 0, 0.1);
  padding: calc(4px * 4) calc(4px * 6);
}

.emotion-4>*+*:not( marquee ) {
  margin-left: calc(4px * 2);
}

.emotion-4>* {
  min-width: 0;
}

.emotion-4:last-child {
  border-bottom: none;
}

.emotion-4:first-of-type {
  border-top-left-radius: calc(2px - 1px);
  border-top-right-radius: calc(2px - 1px);
}

.emotion-4:last-of-type {
  border-bottom-left-radius: calc(2px - 1px);
  border-bottom-right-radius: calc(2px - 1px);
}

.emotion-6 {
  color: #1e1e1e;
  line-height: 1.2;
  margin: 0;
  font-size: calc((16 / 13) * 13px);
  font-weight: 600;
}

.emotion-8 {
  box-sizing: border-box;
  height: auto;
  max-height: 100%;
  padding: calc(4px * 4) calc(4px * 6);
}

.emotion-8:first-of-type {
  border-top-left-radius: calc(2px - 1px);
  border-top-right-radius: calc(2px - 1px);
}

.emotion-8:last-of-type {
  border-bottom-left-radius: calc(2px - 1px);
  border-bottom-right-radius: calc(2px - 1px);
}

.emotion-10 {
  background: transparent;
  display: block;
  margin: 0!important;
  pointer-events: none;
  position: absolute;
  will-change: box-shadow;
  border-radius: inherit;
  bottom: 0;
  box-shadow: 0 0px 0px 0 rgba(0 ,0, 0, 0);
  opacity: 1;
  left: 0;
  right: 0;
  top: 0;
  -webkit-transition: box-shadow 200ms cubic-bezier(0.08, 0.52, 0.52, 1);
  transition: box-shadow 200ms cubic-bezier(0.08, 0.52, 0.52, 1);
  border-radius: 2px;
}

@media ( prefers-reduced-motion: reduce ) {
  .emotion-10 {
    transition-duration: 0ms;
  }
}

<div>
  <div
    class="wcpay-deposit-overview"
  >
    <div
      aria-describedby="woocommerce-summary-helptext-1"
      aria-label="Payout overview"
      aria-orientation="horizontal"
      role="menu"
    >
      <p
        class="screen-reader-text"
        id="woocommerce-summary-helptext-1"
      >
        List of data points available for filtering. Use arrow keys to cycle through the list. Click a data point for a detailed report.
      </p>
      <ul
        class="woocommerce-summary has-4-items"
      >
        <li
          class="woocommerce-summary__item-container"
        >
          <div
            class="woocommerce-summary__item"
          >
            <div
              class="woocommerce-summary__item-label"
            >
              Instant payout date: Jan 2, 2020
            </div>
            <div
              class="woocommerce-summary__item-data"
            >
              <div
                class="woocommerce-summary__item-value"
              >
                <div
                  class="woocommerce-order-status"
                >
                  <span
                    class="woocommerce-order-status__indicator is-paid"
                  />
                  Completed (paid)
                </div>
              </div>
            </div>
          </div>
        </li>
        <li
          class="woocommerce-summary__item-container"
        >
          <div
            class="woocommerce-summary__item"
          >
            <div
              class="woocommerce-summary__item-label"
            >
              Payout amount
            </div>
            <div
              class="woocommerce-summary__item-data"
            >
              <div
                class="woocommerce-summary__item-value"
              >
                $20.30
              </div>
            </div>
          </div>
        </li>
        <li
          class="woocommerce-summary__item-container"
        >
          <div
            class="woocommerce-summary__item"
          >
            <div
              class="woocommerce-summary__item-label"
            >
              1.5% service fee
            </div>
            <div
              class="woocommerce-summary__item-data"
            >
              <div
                class="woocommerce-summary__item-value wcpay-deposit-fee"
              >
                $0.30
              </div>
            </div>
          </div>
        </li>
        <li
          class="woocommerce-summary__item-container"
        >
          <div
            class="woocommerce-summary__item"
          >
            <div
              class="woocommerce-summary__item-label"
            >
              Net payout amount
            </div>
            <div
              class="woocommerce-summary__item-data"
            >
              <div
                class="woocommerce-summary__item-value wcpay-deposit-net"
              >
                $20.00
              </div>
            </div>
          </div>
        </li>
      </ul>
    </div>
    <div
      class="components-surface components-card emotion-0 emotion-1"
      data-wp-c16t="true"
      data-wp-component="Card"
    >
      <div
        class="emotion-2 emotion-1"
      >
        <div
          class="components-flex components-card__header components-card-header emotion-4 emotion-1"
          data-wp-c16t="true"
          data-wp-component="CardHeader"
        >
          <span
            class="components-truncate components-text emotion-6 emotion-1"
            data-wp-c16t="true"
            data-wp-component="Text"
          >
            Payout details
          </span>
        </div>
        <div
          class="components-card__body components-card-body emotion-8 emotion-1"
          data-wp-c16t="true"
          data-wp-component="CardBody"
        >
          <div
            class="woopayments-payout-details-header"
          >
            <div
              class="woopayments-payout-details-header__item"
            >
              <h2>
                Bank account
              </h2>
              <div
                class="woopayments-payout-details-header__value"
              >
                MOCK BANK •••• 1234 (USD)
              </div>
            </div>
            <div
              class="woopayments-payout-details-header__item"
            >
              <h2>
                Bank reference ID
              </h2>
              <div
                class="woopayments-payout-details-header__value"
              >
                <div
                  class="woopayments-payout-details-header__value"
                >
                  Not available
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        aria-hidden="true"
        class="components-elevation emotion-10 emotion-1"
        data-wp-c16t="true"
        data-wp-component="Elevation"
      />
      <div
        aria-hidden="true"
        class="components-elevation emotion-10 emotion-1"
        data-wp-c16t="true"
        data-wp-component="Elevation"
      />
    </div>
  </div>
</div>
`;

exports[`Deposit overview renders notice when deposit data is not found 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  width: 100%;
}

.emotion-0>*+*:not( marquee ) {
  margin-left: calc(4px * 2);
}

.emotion-0>* {
  min-width: 0;
}

.emotion-2 {
  display: block;
  max-height: 100%;
  max-width: 100%;
  min-height: 0;
  min-width: 0;
}

<div>
  <div
    class="wcpay-inline-notice wcpay-inline-error-notice components-notice is-error"
  >
    <div
      class="components-notice__content"
    >
      <div
        class="components-flex emotion-0 emotion-1"
        data-wp-c16t="true"
        data-wp-component="Flex"
      >
        <div
          class="components-flex-item wcpay-inline-notice__icon wcpay-inline-error-notice__icon emotion-2 emotion-1"
          data-wp-c16t="true"
          data-wp-component="FlexItem"
        >
          <svg
            class="gridicon gridicons-notice-outline"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g>
              <path
                d="M12 4c4.411 0 8 3.589 8 8s-3.589 8-8 8-8-3.589-8-8 3.589-8 8-8m0-2C6.477 2 2 6.477 2 12s4.477 10 10 10 10-4.477 10-10S17.523 2 12 2zm1 13h-2v2h2v-2zm-2-2h2l.5-6h-3l.5 6z"
              />
            </g>
          </svg>
        </div>
        <div
          class="components-flex-item wcpay-inline-notice__content wcpay-inline-error-notice__content emotion-2 emotion-1"
          data-wp-c16t="true"
          data-wp-component="FlexItem"
        >
          The deposit you are looking for cannot be found.
        </div>
      </div>
      <div
        class="components-notice__actions"
      />
    </div>
  </div>
</div>
`;
